--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 upload_port = 192.168.1.196
-monitor_port = COM8
+upload_speed = 115200
+monitor_port = COM14
 monitor_speed = 115200
 
 lib_deps =
