--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-upload_port = 192.168.1.196
-upload_speed = 115200
+upload_port = 192.168.1.105
+;upload_speed = 115200
 monitor_port = COM14
 monitor_speed = 115200
 
