--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-upload_port = 192.168.1.105
+upload_port = COM14
 ;upload_speed = 115200
 monitor_port = COM14
 monitor_speed = 115200
@@ -20,3 +20,4 @@ monitor_speed = 115200
 lib_deps =
     PubSubClient
     ArduinoJSON
+    ESP32Encoder
